--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "jsdom": "^19.0.0",
-    "mysql2": "^2.3.3",
-    "npm": "^8.9.0"
+    "mysql2": "^2.3.3"
   }
 }
