--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "jsdom": "^19.0.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3"
+  },
+    "scripts": {
+    "start": "node audiocave.js"
   }
 }
